# sdk-ul-mu-pairing

./: CMakeLists.txt  README.md
.github/workflows/: ci-debug.yml  ci-release.yml  ci.yml
lib/: UlMuPair.cpp  UlMuPair.hpp
test/: UplinkMuPairing.m  case.cpp  case1data.txt  cs2data.txt  test.out  uplinkMUpairing_Corrfactors.fig  uplinkUEpairing_SINR_delta_CS1.fig
test/simulate/: UplinkMuPairing.m  example_beamSet_32port_2x8x2_singlePol.csv
